--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start-server": "nodemon server.js",
-    "start-client": "cd client && npm run dev",
+    "start-server": "cd backend && nodemon server.js",
+    "start-client": "cd frontend && npm run dev",
     "start": "concurrently \"npm run start-server\" \"npm run start-client\""
   },
   "dependencies": {
