feat: added the hero, login and register sections.

--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -21,13 +21,15 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
-
-
-    /* Path Aliases */
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": [
+        "./src/*"
+      ]
     }
   },
-  "include": ["src"]
+  "include": [
+    "src",
+    "types.d.ts"
+  ]
 }
