feat/root: update readme.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,4 @@
+# 8080 for local development
 PORT=your_port
 DATABASE_URL=postgresql://USER:PASSWORD@HOST:PORT/DATABASE?schema=SCHEMA
 JWT_SECRET=your_jwt_secret_key
