--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,2 @@
-# For local development, it could be your localhost url with port
-VITE_API_BASE_URL=your_api_url:PORT/api/v1/
+VITE_API_BASE_URL=http://localhost:8080/api/v1/
 
